# verona-bc

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  alloc.trieste  string.trieste
.agents/skills/add-test/: SKILL.md
.agents/skills/debug/: SKILL.md
.agents/skills/testsuite/: SKILL.md
.agents/skills/verona-coding/: SKILL.md
.agents/skills/verona-conventions/: SKILL.md
.agents/skills/verona-type-inference/: SKILL.md
.claude/skills/add-test/: SKILL.md
.claude/skills/docs-update/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/testsuite/: SKILL.md
.claude/skills/vbci-memory/: SKILL.md
.claude/skills/verona-coding/: SKILL.md
.claude/skills/verona-conventions/: SKILL.md
.claude/skills/verona-type-inference/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: cmake.yml
cmake/: libffi.cmake
docs/: plan-memo.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: verona.tmLanguage.json
examples/argv/: argv.vir
examples/array/: array.vir
examples/error/: error.vir
examples/ffi/: ffi.vir
examples/field/: field.vir
examples/final/: final.vir
examples/ret4/: ret4.vir
examples/ssl/: ssl.vir
examples/uniontypes/: uniontypes.vir
examples/uv/: uv.vir
examples/v/: TUTORIAL.md
examples/v/alloc/: alloc.v
examples/v/controlflow/: controlflow.v
examples/v/ident_stress/: ident_stress.v
examples/v/lambda/: lambda.v
examples/v/reify/: reify.v
examples/v/resolve/: resolve.v
examples/v/tutorial1_basics/: tutorial1_basics.v
examples/v/tutorial2_classes/: tutorial2_classes.v
examples/v/tutorial3_generics/: tutorial3_generics.v
examples/v/tutorial4_lambdas/: tutorial4_lambdas.v
examples/v/vsyntax/: test.v
examples/vir/argv/: argv.vir
examples/vir/array/: array.vir
examples/vir/be/: be.vir
examples/vir/drag_with_ref_to_prev/: drag_with_ref_to_prev.vir
examples/vir/ffi/: ffi.vir
examples/vir/field/: field.vir
examples/vir/final/: final.vir
examples/vir/ret4/: ret4.vir
examples/vir/ssl/: ssl.vir
examples/vir/uv/: uv.vir
examples/vsyntax/: test.v
include/: vbcc.h  vbci.h
src/: CMakeLists.txt  cown.h  frame.h  function.h  ident.h  main.cc  object.cc  object.h  program.cc  program.h  region.h  thread.cc  thread.h  types.h  value.cc  value.h
testsuite/: CMakeLists.txt  vbcc.cmake  vbci.cmake  vc.cmake  verona_testsuite.cmake
testsuite/v/alloc/: ..trieste  alloc.v
testsuite/v/array_bulk/: array_bulk.v
testsuite/v/array_lit/: array_lit.v
testsuite/v/auto_create/: auto_create.v
testsuite/v/binop_mismatch/: binop_mismatch.v
testsuite/v/callback_basic/: callback_basic.v
testsuite/v/callback_field_free/: callback_field_free.v
testsuite/v/callback_field_runtime/: callback_field_runtime.v
testsuite/v/callback_generic_apply/: callback_generic_apply.v
testsuite/v/callback_generic_method/: callback_generic_method.v
testsuite/v/callback_multi_apply/: callback_multi_apply.v
testsuite/v/callback_no_apply/: callback_no_apply.v
testsuite/v/callback_shape_field/: callback_shape_field.v
testsuite/v/controlflow/: ..trieste  controlflow.v
testsuite/v/dash-dir-modules/: dash-dir-modules.v
testsuite/v/dontcare/: dontcare.v
testsuite/v/each_loop/: each_loop.v
testsuite/v/else_expr/: else_expr.v
testsuite/v/empty_union_shape/: empty_union_shape.v
testsuite/v/ffi_library_name/: ffi_library_name.v
testsuite/v/ffi_pin_unpin/: ffi_pin_unpin.v
testsuite/v/ffi_ptr_create/: ffi_ptr_create.v
testsuite/v/ffi_ptr_readonly_probe/: ffi_ptr_readonly_probe.v
testsuite/v/ffi_ptr_runtime/: ffi_ptr_runtime.v
testsuite/v/ffi_struct_layout/: ffi_struct_layout.v
testsuite/v/finalizer/: finalizer.v
testsuite/v/for_loop/: for_loop.v  forloop.v
vbcc/: CMakeLists.txt  bitset.cc  bitset.h  bytecode.cc  bytecode.h  from_chars.h  irsubtype.h  lang.cc  lang.h  main.cc  parser.cc  sequent.h  stringtable.cc  stringtable.h  wf.h
vbcc/passes/: assignids.cc  labels.cc  liveness.cc  memo.cc  optimize.cc  parser.cc  statements.cc  typecheck.cc  validids.cc
vbci/: CMakeLists.txt  TODO:.md  array.h  callback.cc  callback.h  classes.cc  classes.h  collect.cc  collect.h  cown.h  drag.cc  drag.h  dynlib.cc  dynlib.h  ffi.cc  ffi.h  frame.cc  frame.h  freeze.cc  freeze.h  function.h  function_signature.h  header.h  ident.h  location.cc  location.h  logging.h  main.cc  merge.cc  merge.h  object.cc  object.h  platform.h  program.cc  program.h  region.cc  region.h  region_arena.h  region_ext.h  region_rc.cc  (+11 more)
vbci/ffi/: eyeballs.cc  ffi.cc  ffi.h  ssl.cc
vc/: CMakeLists.txt  README.md  bounds.h  dependency.h  lang.cc  lang.h  main.cc  pathreification.cc  pathreification.h  reification.cc  reification.h  reifications.cc  reifications.h  sequent.h  subtype.cc  subtype.h
vc/_builtin/: array.v  bool.v  cown.v  f32.v  f64.v  freeze.v  i16.v  i32.v  i64.v  i8.v  ilong.v  is.v  isize.v  nomatch.v  none.v  string.v  u16.v  u32.v  u64.v  u8.v  ulong.v  usize.v
vc/_builtin/ffi/: callback.v  exit.v  external.v  notify.v  pin.v  ptr.v  struct.v
vc/_builtin/mem/: merge.v
vc/builtin/: any.v  bool.v  cown.v  nomatch.v  none.v  ref.v  string.v  u64.v
vc/docs/: 01-getting-started.md  02-program-structure.md  03-types.md  04-declarations.md  05-expressions.md  06-control-flow.md  07-functions.md  08-classes-and-objects.md  09-shapes.md  10-generics.md  11-tuples.md  12-arrays.md  13-lambdas.md  14-partial-application.md  15-concurrency.md  16-modules.md  17-ffi.md  18-type-inference.md  19-memory-model.md  20-compiler-pipeline.md  21-toolchain-usage.md  22-builtin-types.md  23-grammar-summary.md  24-error-handling.md  25-compile-time-execution.md  26-gotchas.md  27-common-patterns.md  README.md  infer-pass.md
vc/passes/: anf.cc  application.cc  dot.cc  flatten.cc  functype.cc  ident.cc  infer.cc  infer_old.cc  operators.cc  parser.cc  reify.cc  structure.cc  sugar.cc
vc/std/builtin/: array.v  bool.v  cown.v  f32.v  f64.v  i16.v  i32.v  i64.v  isize.v  nomatch.v  string.v  u16.v  u32.v  u64.v  u8.v  ulong.v  usize.v
(+2596 files in other folders)
